<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="status_bar_clear_all_button">Clear Notification</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="indicator_wifi">Wi-Fi</string>
    <string name="indicator_bt">Bluetooth</string>
    <string name="indicator_vibration">Vibration</string>
    <string name="indicator_sound">Silent</string>
    <string name="quickpanel_mute">Mute</string>
    <string name="quickpanel_speaker">Speaker</string>
    <string name="quickpanel_end">End</string>
    <string name="ticker_voicerecord">Ticker VR test</string>
    <string name="ticker_call">Ticker CALL test</string>
    <string name="ticker_radio">Ticker RADIO test</string>
    <string name="ticker_music">Ticker MUSIC test</string>
    <string name="quickpanel_retreive">Retreive</string>
    <string name="no_missed_event">You have no missed events</string>
    <string name="phone_format">You have missed call from %1$s at %2$s</string>
    <string name="mms_format">You have new message from %1$s at %2$s</string>
    <string name="schedule_format">You have missed %s schedule</string>
    <string name="multi_format">%1$d missed call, %2$d new message, %3$d missed event</string>
    <string name="quickpanel_save">Save</string>
    <string name="quickpanel_rec">REC</string>
    <string name="quickpanel_pause">Pause</string>
    <string name="quickpanel_paused">Pause</string>
    <string name="quickpanel_standby">Standby</string>
    <string name="indicator_gps">GPS</string>
    <string name="indicator_rotation_lock">Rotation</string>
    <string name="indicator_orientation">"Auto
rotation"</string>
    <string name="quick_settings_error">Error</string>
    <string name="status_bar_ongoing_text_call">Call</string>
    <string name="phone_m_format">You have %d missed calls.</string>
    <string name="mms_m_format">You have %d new messages.</string>
    <string name="tw_seekbarsplit_seekbar_control">Seek control</string>
    <string name="dragndroplist_description">Tap and hold to drag and drop.</string>
    <string name="dragndroplist_description_exp_by_touch">Double tap and hold to drag and drop.</string>
    <string name="dragndroplist_drag_start">Started dragging item at position %d.</string>
    <string name="dragndroplist_drag_release">Item dropped into position %d.</string>
    <string name="dragndroplist_item_cannot_be_dragged">Item at position %d cannot be dragged.</string>
    <string name="expandablelist_collapse">Collapse</string>
    <string name="expandablelist_expand">Expand</string>
</resources>
